- po/cs.po, po/de.po, po/es.po, po/fi.po, po/fr.po, po/gr.po, po/it.po: Updated
  from new sources. (VRI)
- desk/desk_rsc.c, po/de.po, po/es.po, po/fi.po, po/gr.po, po/ru.po: Fixed all
  the menu separator lines length (some of them were still wrong). (VRI)

2011-08-05
- desk/icons/*.icn, desk/icons/iconhi.h, desk/icons/iconlo.h,
  desk/icons/read.me: Converted to LF line endings. (VRI)
- desk/icons/*.icn, desk/icons.c: Fixed icon data ordering for GCC 4.6. (VRI)
- desk/deskins.c, desk/icons.c, desk/icons.h: Added constness. (VRI)
- Makefile, desk/icons.c: Removed the icons dir from system include path. (VRI)

2011-08-05
- desk/icons/deskhi.icn, desk/icons/desklo.icn: Set as binary in CVS. (VRI)
- util/bootasm.S, util/bootsect.S: Added ColdFire support. (VRI)
- util/boot.c: Fixed warnings with GCC 4.6.1. (VRI)

2011-08-12
- .cvsignore, Makefile: Added the firebee target. (VRI)
- Makefile: Compile the aranym target with -m68040. (VRI)
- Makefile: Added the defines MACHINE_ARANYM and MACHINE_FIREBEE to identify the
  machine-specific ROMs from inside the sources. (VRI)
- bios/bios.c, include/config.h: Added new define ALWAYS_SHOW_INITINFO to show
  the welcome screen on every boot. Enabled by default on the FireBee. (VRI)
- bios/bios.c, bios/initinfo.c, include/config.h: Added new define
  INITINFO_DURATION to set the welcome screen duration. (VRI)
- bios/machine.c: Fixed machine_name() for the FireBee. (VRI)
- desk/desk_rsc.c: Reworked some dialogs for French texts. (THH)
- po/fr.po: Changed "Pas de clic" to "Auto" to fit the button. (VRI)
- Makefile, include/config.h: Moved machine-specific defines to config.h. (VRI)
- bios/memory.S: Added another sanity check for emulators that do not emulate
  the mirroring of memory banks. (THH)

2011-08-13
- Makefile, bios/bios.c, bios/biosmem.c, bios/startup.S, include/config.h:
  Replaced the is_ramtos variable by the EMUTOS_RAM define to determine if
  EmuTOS is running in RAM. (VRI)